--- a/dagster_cloud.yaml
+++ b/dagster_cloud.yaml
@@ -1,7 +1,7 @@
-locations:
+dagsterlocations:
   - location_name: example_location
     code_source:
-      package_name: my_dagster_project
+      package_name: pde_dagster
     build:
       directory: ./
       registry: 764506304434.dkr.ecr.us-west-2.amazonaws.com/branch-deployments-gh-action-test
